--- a/.github/workflows/manual-workflow-with-input.yml
+++ b/.github/workflows/manual-workflow-with-input.yml
@@ -23,4 +23,5 @@ jobs:
     steps:
       - name: Display Inputs
         run: |
-          echo "👤 H
+          echo "👤 Hello, ${{ github.event.inputs.username }}!"
+          echo "🌍 Environment selected: ${{ github.event.inputs.environment }}"
